# nuvelle

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
dashboard_data/: seed_dramas.json
deploy/: Dockerfile.static  Dockerfile.website  README-gcp.md  README-google-cloud.md  cloudbuild-api.yaml  cloudbuild-crawler.yaml  cloudbuild-static.yaml  cloudbuild-website.yaml  deploy-gcp.sh  google-cloud.sh  nginx-static.conf
nuvelle_admin/: index.html  package.json  vite.config.ts
nuvelle_api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
nuvelle_app/: sw.js
nuvelle_crawler/: Dockerfile  README.md  pyproject.toml  requirements.txt
nuvelle_crawler/nuvelle_crawler/: cli.py  config.py  main.py
nuvelle_crawler/nuvelle_crawler/db/: __init__.py  models.py  repositories.py  session.py
nuvelle_crawler/nuvelle_crawler/routes/: internal.py
nuvelle_crawler/nuvelle_crawler/services/: backfill.py  compensation.py  planner.py  runner.py  sync_service.py
nuvelle_crawler/nuvelle_crawler/sources/: base.py  config.py  registry.py
nuvelle_crawler/nuvelle_crawler/sources/dramacps_materials/: __init__.py  adapter.py  client.py  mapper.py
nuvelle_crawler/nuvelle_crawler/sources/reelshort_cps/: __init__.py  adapter.py  client.py  mapper.py
nuvelle_crawler/nuvelle_crawler/tasks/: __init__.py  enqueuer.py
nuvelle_dash/: index.html
nuvelle_kit/: .dockerignore  Dockerfile  (+10 more)
(+262 files in other folders)
