[project]
name = "nuvelle-crawler"
version = "0.1.0"
description = "Third-party short-drama crawler service for Nuvelle"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.28,<1",
  "SQLAlchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "google-cloud-tasks>=2.16,<3",
  "google-cloud-secret-manager>=2.20,<3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

